fix: zoom no-meeting responsive, spotlight progress complete btn on mobile devices, datepicker focus primary color, buddybos icon size-spacing issue

--- a/v2-library/src/components/datapicker/TutorDatepicker.scss
+++ b/v2-library/src/components/datapicker/TutorDatepicker.scss
@@ -558,7 +558,7 @@
 	.tutor-react-datepicker .react-datepicker__input-container input {
 		height: 48px;
 		&:focus {
-			border-color: #3e64de;
+			border-color: var(--tutor-primary-color);
 		}
 	}
 }
